# swe-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruffignore  DEFINITION_OF_DONE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt  scripts.bat  scripts.ps1  verify_database.py
alembic/: env.py
alembic/versions/: 0320da79bb1c_update_notification_datetime_to_.py  4ac8bc3b4b99_update_order_datetime_to_timestamptz.py  612d4b5ec13d_update_supplier_staff_datetime_to_.py  81c4aacb61c3_update_complaint_datetime_to_timestamptz.py  9c6abaf23451_initial_migration_create_all_tables.py  c4cca0afafbf_test_empty_migration_verification.py  e241c7628de0_change_datetime_to_timestamptz.py  f4f7b05a1952_update_chat_datetime_to_timestamptz.py  f69fa72f36e7_phase3_verification_check.py  fdb237035d00_update_product_datetime_to_timestamptz.py  ff5d60414338_update_consumer_supplier_link_datetime_.py
app/: main.py
app/api/: __init__.py  catalog.py  dependencies.py  deps.py  helpers.py  main.py  router.py
app/api/routers/: __init__.py  auth.py  catalog.py  chats.py  complaints.py  links.py  main.py  notifications.py  orders.py  products.py  users.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  middleware.py  rate_limit.py  rate_limit_decorator.py  roles.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  chat_message.py  chat_session.py  complaint.py  consumer.py  link.py  notification.py  order.py  order_item.py  product.py  supplier.py  supplier_staff.py  user.py
app/modules/auth/: router.py  schema.py
app/modules/chat/: model.py  router.py  schema.py
app/modules/complaint/: model.py  router.py  schema.py
app/modules/consumer/: model.py  schema.py
app/modules/link/: model.py  router.py  schema.py
app/modules/notification/: model.py  router.py
app/modules/order/: model.py  router.py  schema.py
app/modules/product/: model.py  router.py  schema.py
app/modules/supplier/: model.py  schema.py
app/modules/user/: model.py  router.py  schema.py
app/schemas/: __init__.py  chat.py  common.py  complaint.py  link.py  notification.py  order.py  product.py
app/schemas/auth/: __init__.py  requests.py  responses.py
app/schemas/user/: __init__.py  responses.py
app/utils/: __init__.py  hashing.py  helpers.py  pagination.py  password_policy.py
docs/: DEFINITION_OF_DONE.md  DOD_VERIFICATION.md  FRONTEND_HANDOVER.md  MODULES.md  PHASE2_VERIFICATION.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_STATUS.md  PROJECT_CHARTER.md  REPORT_GUIDE.md  SECURITY.md  STRUCTURAL_ANALYSIS.md  SUBMISSION_GUIDE.md  postman_collection.json
scripts/: check_dod.py  demo.sh  export_openapi.py  seed.py
tests/: conftest.py  fixtures.py  test_access_rules.py  test_alembic.py  test_auth_integration.py  test_chats_integration.py  test_complaints_integration.py  test_config.py  test_cors.py  test_db_session.py  test_health.py  test_links_integration.py  test_logging.py  test_main.py  test_middleware.py  test_notifications_integration.py  test_observability.py  test_orders_integration.py  test_products_integration.py  test_rbac.py  test_security.py  test_state_machines.py
tests/api/: test_auth.py  test_database_schema.py
tests/unit/: test_security.py
